# connect-rs

./: .gitignore
client/: .gitignore  Cargo.toml  errs  profile.toml  res  rfbdskjfbjksd-profile.toml  room-2121-profile.toml
client/src/: app_backend.rs  kernel_wg.rs  logger.rs  main.rs  server.rs  server_trait.rs  table_data.rs  toml_conf.rs  wg_trait.rs
server/: libunwind.so.1  package-lock.json  package.json
server/src/: worker.js
stun/: Cargo.toml
stun/src/: main.rs
