[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chrono = "0.4.26"
core_extensions = { version = "1.5.3", features = ["on_drop"]}
ctrlc = "3.4.0"
nix = "0.26.2"
redis =  { version = "0.23.0", features = ["tls-native-tls"] }
rustls = "0.21.1"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
stun-client = "0.1.2"
surge-ping = "0.8.0"
tokio = { version = "1.28.2", features = ["full"] }
websockets = "0.3.0"
wireguard-keys = "0.1.1"
