[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.71", features = ["backtrace"] }
async-trait = "0.1.68"
chrono = "0.4.26"
clap = { version = "4.3.8", features = ["derive"] }
crossterm = "0.26.1"
ctrlc = "3.4.0"
futures = "0.3.28"
is-root = "0.1.2"
nix = "0.26.2"
once_cell = "1.18.0"
rand = "0.8.5"
redis =  { version = "0.23.0", features = ["rustls", "tokio-rustls", "tokio-rustls-comp", "aio"] }
reqwest = { version = "0.11.18", features = ["rustls-tls", "rustls"], default-features = false }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
stun-client = "0.1.2"
stunclient = "0.4.0"
surge-ping = "0.8.0"
tokio = { version = "1.28.2", features = ["full"] }
toml = "0.7.4"
wireguard-keys = "0.1.1"
